dataset1235/2025-2/805158916/users/1084532176/executions/2651470117_1462915504.log
== RUN (2025-08-27 01:43:27)
-- CODE: 
 from math import tan 
from math import pi 
L= float (input("escreva o lado do pentagono") )
p=L/(2*tan(pi/5))
a= (5/2)* L*p
print (round (a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    from math import tan 
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    from math import tan 
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    from math import tan 
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    from math import tan 
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    from math import tan 
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    from math import tan 
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:50:59)
-- CODE: 
from math import tan 
from math import pi 
L= float (input("escreva o lado do pentagono") )
p= L/(2*tan(pi/5))
a= (5/2)*L*p
print (round (a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
escreva o lado do pentagono139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
escreva o lado do pentagono61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
escreva o lado do pentagono208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
escreva o lado do pentagono110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
escreva o lado do pentagono27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
escreva o lado do pentagono172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 01:50:26)
-- CODE: 
from math import tan 
from math import pi 
L= float (input("escreva o lado do pentagono") )
p= L/(2*tan(pi/5))
a= (5/2)*L*p
print (round (a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
escreva o lado do pentagono139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
escreva o lado do pentagono61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
escreva o lado do pentagono208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
escreva o lado do pentagono110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
escreva o lado do pentagono27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
escreva o lado do pentagono172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 01:48:36)
-- CODE: 
from math import tan 
from math import pi 
L= float (input("escreva o lado do pentagono") )
p= L/(2*tan(pi/5))
a= (5/2)*L*p
print (round (a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
escreva o lado do pentagono139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
escreva o lado do pentagono61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
escreva o lado do pentagono208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
escreva o lado do pentagono110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
escreva o lado do pentagono27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
escreva o lado do pentagono172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 01:50:23)
-- CODE: 
from math import tan 
from math import pi 
L= float (input("escreva o lado do pentagono") )
p= L/(2*tan(pi/5))
a= (5/2)*L*p
print (round (a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
escreva o lado do pentagono139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
escreva o lado do pentagono61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
escreva o lado do pentagono208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
escreva o lado do pentagono110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
escreva o lado do pentagono27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
escreva o lado do pentagono172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 18:58:11)
-- CODE: 
from math import *
L = int(input("Tamanho do lado do pentagono: "))
Ap = L / (2*tan(pi/5))
Ar = 5/2*(L*Ap)

print(round(Ar, 2))


-- EXECUTION TIME: 
0.0166667
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Tamanho do lado do pentagono: 139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Tamanho do lado do pentagono: 61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Tamanho do lado do pentagono: 208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Tamanho do lado do pentagono: 110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Tamanho do lado do pentagono: 27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Tamanho do lado do pentagono: 172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:43:30)
-- CODE: 
 from math import tan 
from math import pi 
L= float (input("escreva o lado do pentagono") )
p=L/(2*tan(pi/5))
a= (5/2)* L*p
print (round (a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    from math import tan 
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    from math import tan 
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    from math import tan 
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    from math import tan 
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    from math import tan 
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    from math import tan 
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 01:48:17)
-- CODE: 
from math import tan 
from math import pi 
L= float (input("escreva o lado do pentagono") )
p= L/(2*tan(pi/5))
a= (5/2)*L*p
print (round (a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
escreva o lado do pentagono139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
escreva o lado do pentagono61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
escreva o lado do pentagono208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
escreva o lado do pentagono110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
escreva o lado do pentagono27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
escreva o lado do pentagono172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
